--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="https://github.com/weihengtang/">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
