--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Jon Barron
+                  Weiheng Tang
                 </p>
                 <p>I am an undergraduate in physics department at <a href="https://english.pku.edu.cn/">Peking University</a>. My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
                 </p>
