--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Template from <a href="https://github.com/jonbarron/jonbarron_website">source code</a>.
+                  Template from <a href="https://jonbarron.info/">Jon Barron</a>.
               </td>
             </tr>
           </tbody></table>
