--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p style="text-align:center">
                   <a href="mailto:wayneyeyali@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
+                  <a href="https://twitter.com/weiheng_tang">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
                   <a href="https://github.com/weihengtang/">Github</a>
                 </p>
