--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:wayneyeyali@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/CV Weiheng Tang.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/weiheng_tang">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
+                  <a href="www.linkedin.com/in/weiheng-tang">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://github.com/weihengtang/">Github</a>
                 </p>
               </td>
