--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Weiheng Tang
                 </p>
-                <p>I am an undergraduate in physics department at <a href="https://english.pku.edu.cn/">Peking University</a>. My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
+                <p>I am a senior undergraduate student in the <a href="https://english.phy.pku.edu.cn/">School of Physics</a> at <a href="https://english.pku.edu.cn/">Peking University</a>. My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
                 </p>
                 <p>
                   
