--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <p class="name" style="text-align: center;">
                   Weiheng Tang
                 </p>
-                <p>I am a senior undergraduate student in the <a href="https://english.phy.pku.edu.cn/">School of Physics</a> at <a href="https://english.pku.edu.cn/">Peking University</a>. My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
+                <p>I am a senior undergraduate student in the <a href="https://english.phy.pku.edu.cn/">School of Physics</a> at <a href="https://english.pku.edu.cn/">Peking University</a>. Previously, I had the privilege to work with Prof. <a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a> at <a href="https://duke.edu/">Duke University</a>.
                 </p>
                 <p>
-                  
+                  My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:wayneyeyali@gmail.com">Email</a> &nbsp;/&nbsp;
