--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Weiheng Tang
                 </p>
-                <p>I am a senior undergraduate student in the <a href="https://english.phy.pku.edu.cn/">School of Physics</a> at <a href="https://english.pku.edu.cn/">Peking University</a>. Previously, I had the privilege to work with Prof. <a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a> at <a href="https://duke.edu/">Duke University</a>.
+                <p>I am a senior undergraduate student in the <a href="https://english.phy.pku.edu.cn/">School of Physics</a> at <a href="https://english.pku.edu.cn/">Peking University</a>, advised by Prof. <a href="https://nbic.pku.edu.cn/rcdw/kyry/8b75fe1334cf4568b47b8a9951b0f639.htm">He Sun</a>. Previously, I had the privilege to work with Prof. <a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a> at <a href="https://duke.edu/">Duke University</a>.
                 </p>
                 <p>
                   My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
