--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Weiheng Tang</title>
 
-    <meta name="author" content="Weihen Tang">
+    <meta name="author" content="Weiheng Tang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
