--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <a href="https://arxiv.org/abs/2411.18613">arXiv</a>
         <p></p>
         <p>
-				An approach for turning a video into a 4D radiance field that can be rendered in real-time. When combined with a text-to-video model, this enables text-to-4D.
+				We propose a principled EM framework for learning clean diffusion models from noisy measurements with arbitrary corruption types. We enhance the E-step of EMDiffusion by upgrading the DPS algorithm to a plug-and-play Monte Carlo (PMC) method, which offers provable convergence guarantees and improved posterior sampling accuracy.
         </p>
       </td>
     </tr>
