--- a/index.html
+++ b/index.html
@@ -76,23 +76,20 @@
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
         <a href="https://cat-4d.github.io/">
-			<span class="papertitle">CAT4D: Create Anything in 4D with Multi-View Video Diffusion Models
+			<span class="papertitle">Learning Diffusion Model from Noisy Measurement using Principled Expectation-Maximization Method
 </span>
         </a>
         <br>
-				<a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu</a>,
-				<a href="https://ruiqigao.github.io/">Ruiqi Gao</a>,
-				<a href="https://poolio.github.io/">Ben Poole</a>,
-				<a href="https://alextrevithick.github.io/">Alex Trevithick</a>,
-				<a href="https://www.cs.columbia.edu/~cxz/index.htm/">Changxi Zheng</a>,
-				<strong>Jonathan T. Barron</strong>,
-				<a href="https://holynski.org/">Aleksander Holynski</a>
+				<a href="https://dblp.org/pid/121/0917">Weimin Bai</a>,
+	      			<strong>Weiheng Tang</strong>,
+				<a href="https://www.researchgate.net/profile/Enze-Ye-2">Enze Ye</a>,
+				<a href="https://scholar.google.com/citations?user=mUKIR7wAAAAJ">Siyi Chen</a>,
+				<a href="https://wenzhengchen.github.io/">Wenzheng Chen</a>,
+				<a href="http://users.cms.caltech.edu/~hesun/">He Sun</a>
         <br>
-        <em>arXiv</em>, 2024
+        <em><a href="https://arxiv.org/abs/2410.11241">arXiv</a></em>, 2024
         <br>
-        <a href="https://cat-4d.github.io/">project page</a>
-        /
-        <a href="https://arxiv.org/abs/2411.18613">arXiv</a>
+        
         <p></p>
         <p>
 				We propose a principled EM framework for learning clean diffusion models from noisy measurements with arbitrary corruption types. We enhance the E-step of EMDiffusion by upgrading the DPS algorithm to a plug-and-play Monte Carlo (PMC) method, which offers provable convergence guarantees and improved posterior sampling accuracy.
