--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://cat-4d.github.io/">
+        <a href="https://arxiv.org/abs/2410.11241">
 			<span class="papertitle">Learning Diffusion Model from Noisy Measurement using Principled Expectation-Maximization Method
 </span>
         </a>
@@ -92,7 +92,7 @@
         
         <p></p>
         <p>
-				We propose a principled EM framework for learning clean diffusion models from noisy measurements with arbitrary corruption types. We enhance the E-step of EMDiffusion by upgrading the DPS algorithm to a plug-and-play Monte Carlo (PMC) method, which offers provable convergence guarantees and improved posterior sampling accuracy.
+				We propose a principled EM framework for learning clean diffusion models from noisy measurements with arbitrary corruption types, enhancing the E-step of EMDiffusion by upgrading the DPS algorithm to a plug-and-play Monte Carlo (PMC) method.
         </p>
       </td>
     </tr>
