--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
     <tr onmouseout="cat4d_stop()" onmouseover="cat4d_start()" bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='cat4d_image'><video  width=100% height=100% muted autoplay loop>
-          <source src="images/cat4d.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video></div>
-          <img src='images/cat4d.jpg' width="160">
+          <img src='images/ICASSP.png' width="160">
         </div>
         <script type="text/javascript">
           function cat4d_start() {
