--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <tr onmouseout="cat4d_stop()" onmouseover="cat4d_start()" bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
-          <img src='images/ever_before.png' width="160">
+          <img src='images/ICASSP.png' width="160">
         </div>
         <script type="text/javascript">
           function cat4d_start() {
