--- a/index.html
+++ b/index.html
@@ -114,29 +114,26 @@
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://half-potato.gitlab.io/posts/ever/">
-			<span class="papertitle">EVER: Exact Volumetric Ellipsoid Rendering for Real-time View Synthesis
+        <a href="https://arxiv.org/abs/2410.01973">
+			<span class="papertitle">Recording dynamic facial micro-expressions with a multi-focus camera array
 </span>
         </a>
         <br>
-				<a href="https://half-potato.gitlab.io/">Alexander Mai</a>, 
-				<a href="https://phogzone.com/">Peter Hedman</a>,
-				<a href="https://grgkopanas.github.io/">George Kopanas</a>,
-        <a href="https://dorverbin.github.io/">Dor Verbin</a>,
-        <a href="https://scholar.google.com/citations?user=ozNFrecAAAAJ&hl=en">David Futschik</a>,
-        <a href="https://xharlie.github.io/">Qiangeng Xu</a>,
-        <a href="https://jacobsschool.ucsd.edu/faculty/profile?id=253">Falko Kuester</a>,
+				<a href="https://half-potato.gitlab.io/">Lucas Kreiss</a>, 
 				<strong>Jonathan T. Barron</strong>,
-        <a href="https://www.zhangyinda.com/">Yinda Zhang</a>
+				<a href="https://grgkopanas.github.io/">Ramana Balla</a>,
+        <a href="https://dorverbin.github.io/">Xi Yang</a>,
+        <a href="https://scholar.google.com/citations?user=ozNFrecAAAAJ&hl=en">Amey Chaware</a>,
+        <a href="https://xharlie.github.io/">Kanghyun Kim</a>,
+        <a href="https://jacobsschool.ucsd.edu/faculty/profile?id=253">Clare B. Cook</a>,
+        <a href="https://www.zhangyinda.com/">Aurelien Begue</a>
+	Clay Dugo
 				<br>
-        <em>arXiv</em>, 2024
+        <em><a href="https://arxiv.org/abs/2410.01973">arXiv</a></em>, 2024
         <br>
-        <a href="https://half-potato.gitlab.io/posts/ever/">project page</a>
-        /
-        <a href="https://arxiv.org/abs/2410.01804">arXiv</a>
         <p></p>
         <p>
-				Raytracing constant-density ellipsoids yields more accurate and flexible radiance fields than splatting Gaussians, and still runs in real-time.
+				Developed a multi-focus imaging system comprising a 54-camera array by adjusting focal plane distribution to capture dynamic facial expressions with high resolution, large field-of-view, and extended depth-of-field. 
         </p>
       </td>
     </tr>
