--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
         <a href="https://scholar.google.com/citations?user=ozNFrecAAAAJ&hl=en">Amey Chaware</a>,
         <a href="https://xharlie.github.io/">Kanghyun Kim</a>,
         <a href="https://jacobsschool.ucsd.edu/faculty/profile?id=253">Clare B. Cook</a>,
-        <a href="https://www.zhangyinda.com/">Aurelien Begue</a>
-	Clay Dugo
+        <a href="https://www.zhangyinda.com/">Aurelien Begue</a>,
+	Clay Dugo,
+	Mark Harfouche,
+	Kevin C. Zhou,
+	Roarke Horstmeyer
 				<br>
         <em><a href="https://arxiv.org/abs/2410.01973">arXiv</a></em>, 2024
         <br>
