--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
         </a>
         <br>
 				<a href="https://half-potato.gitlab.io/">Lucas Kreiss</a>, 
-				<strong>Jonathan T. Barron</strong>,
+				<strong>Weiheng Tang</strong>,
 				<a href="https://grgkopanas.github.io/">Ramana Balla</a>,
         <a href="https://dorverbin.github.io/">Xi Yang</a>,
         <a href="https://scholar.google.com/citations?user=ozNFrecAAAAJ&hl=en">Amey Chaware</a>,
         <a href="https://xharlie.github.io/">Kanghyun Kim</a>,
         <a href="https://jacobsschool.ucsd.edu/faculty/profile?id=253">Clare B. Cook</a>,
         <a href="https://www.zhangyinda.com/">Aurelien Begue</a>,
-	Clay Dugo,
-	Mark Harfouche,
-	Kevin C. Zhou,
-	Roarke Horstmeyer
+	<a href="https://claydugo.com/">Clay Dugo</a>,
+	<a href="https://horstmeyer.pratt.duke.edu/people/mark-harfouche">Mark Harfouche</a>,
+	<a href="https://kevinczhou.github.io/">Kevin C. Zhou</a>,
+	<a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a>
 				<br>
         <em><a href="https://arxiv.org/abs/2410.01973">arXiv</a></em>, 2024
         <br>
