--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
 </span>
         </a>
         <br>
-				<a href="https://half-potato.gitlab.io/">Lucas Kreiss</a>, 
+				<a href="https://lucaskreiss.github.io/">Lucas Kreiss</a>, 
 				<strong>Weiheng Tang</strong>,
-				<a href="https://grgkopanas.github.io/">Ramana Balla</a>,
-        <a href="https://dorverbin.github.io/">Xi Yang</a>,
-        <a href="https://scholar.google.com/citations?user=ozNFrecAAAAJ&hl=en">Amey Chaware</a>,
-        <a href="https://xharlie.github.io/">Kanghyun Kim</a>,
-        <a href="https://jacobsschool.ucsd.edu/faculty/profile?id=253">Clare B. Cook</a>,
-        <a href="https://www.zhangyinda.com/">Aurelien Begue</a>,
+				<a href="https://www.linkedin.com/in/ramana-balla-a44866185/">Ramana Balla</a>,
+        <a href="https://horstmeyer.pratt.duke.edu/people/xi-yang">Xi Yang</a>,
+        <a href="https://isildur7.github.io/">Amey Chaware</a>,
+        <a href="https://horstmeyer.pratt.duke.edu/people/kanghyun-kim/">Kanghyun Kim</a>,
+        <a href="https://photoacoustics.pratt.duke.edu/people/clare-cook">Clare B. Cook</a>,
+        <a href="https://brain.harvard.edu/hbi_humans/aurelien-begue/">Aurelien Begue</a>,
 	<a href="https://claydugo.com/">Clay Dugo</a>,
-	<a href="https://horstmeyer.pratt.duke.edu/people/mark-harfouche">Mark Harfouche</a>,
+	<a href="http://www.markharfouche.com/">Mark Harfouche</a>,
 	<a href="https://kevinczhou.github.io/">Kevin C. Zhou</a>,
 	<a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a>
 				<br>
