--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <br>
         <p></p>
         <p>
-				Developed a multi-focus imaging system comprising a 54-camera array by adjusting focal plane distribution to capture dynamic facial expressions with high resolution, large field-of-view, and extended depth-of-field. 
+				We developed a multi-focus imaging system comprising a 54-camera array by adjusting focal plane distribution to capture dynamic facial expressions with high resolution, large field-of-view, and extended depth-of-field. 
         </p>
       </td>
     </tr>
