--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
     <tr onmouseout="ever_stop()" onmouseover="ever_start()">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='ever_image'>
-					  <img src='images/ever_after.png' width=100%>
-					</div>
-          <img src='images/ever_before.png' width=100%>
+          <img src='images/MCAM.png' width="160">
         </div>
         <script type="text/javascript">
           function ever_start() {
