--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         
         <p></p>
         <p>
-				We propose a principled EM framework for learning clean diffusion models from noisy measurements with arbitrary corruption types, enhancing the E-step of EMDiffusion by upgrading the DPS algorithm to a plug-and-play Monte Carlo (PMC) method.
+				We proposed a principled EM framework for learning clean diffusion models from noisy measurements with arbitrary corruption types, enhancing the E-step of EMDiffusion by upgrading the DPS algorithm to a plug-and-play Monte Carlo (PMC) method.
         </p>
       </td>
     </tr>
