--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<table style="width:100%; margin:0 auto; border:0; border-spacing:0; padding:16px;"><tbody>
     <tr>
       <td>
-	<h2>Miscellanea</h2>
+	<h2>In progress</h2>
       </td>
     </tr>
   </tbody></table>
