--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-    <tr onmouseout="cat4d_stop()" onmouseover="cat4d_start()" bgcolor="#ffffd0">
+    <tr onmouseout="cat4d_stop()" onmouseover="cat4d_start()">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
           <img src='images/ICASSP.png' width="160">
