--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
     <tr onmouseout="jump_stop()" onmouseover="jump_start()" bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
 	<div class="one">
-	  <img src='images/GenMIR.gif'>
+	  <div class="two" id='jump_image'><img src='images/GenMIR.gif'></div>
+	  <img src='images/GenMIR.jpg'>
 	</div>
 	<script type="text/javascript">
 	  function jump_start() {
