Revise personal introduction and research interests
Updated personal information and research interests.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
                 <p class="name" style="text-align: center;">
                   Weiheng Tang
                 </p>
-                <p>I am a senior undergraduate student in the <a href="https://english.phy.pku.edu.cn/">School of Physics</a> at <a href="https://english.pku.edu.cn/">Peking University</a>, advised by Prof. <a href="http://users.cms.caltech.edu/~hesun/">He Sun</a>. Previously, I had the privilege to work with Prof. <a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a> at <a href="https://duke.edu/">Duke University</a>.
-                </p>
                 <p>
-                  My research interests broadly include computational imaging, bio-medical optics, computer vision and machine learning for solving inverse problems. 
+				  I am a first-year Ph.D. student in the School of Electrical and Computer Engineering at 
+				  <a href="https://engineering.purdue.edu/ECE">Purdue University</a>, 
+				  advised by Prof. <a href="https://engineering.purdue.edu/ChanGroup/stanleychan.html">Stanley H. Chan</a>.
+				</p>
+				<p>
+				  Prior to joining Purdue, I received my Bachelor's degree in Physics and Economics from 
+				  <a href="https://english.pku.edu.cn/">Peking University</a> in 2025, 
+				  where I was advised by Prof. <a href="http://users.cms.caltech.edu/~hesun/">He Sun</a>. 
+				  In 2023, I was a visiting student at <a href="https://duke.edu/">Duke University</a>, 
+				  working with Prof. <a href="https://bme.duke.edu/people/roarke-horstmeyer/">Roarke Horstmeyer</a>.
+				</p>
+                <p>
+                  My research interests broadly include computational imaging, computer vision and machine learning for solving inverse problems. 
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:wayneyeyali@gmail.com">Email</a> &nbsp;/&nbsp;
